--- a/src/App.css
+++ b/src/App.css
@@ -230,10 +230,20 @@
 
 .gif-container img {
 	width: 100%;
+	height: 100%;
+	object-fit: cover;
 	position: absolute;
-	top: 50%;
-	left: 50%;
-	transform: translate(-50%, -50%); /* Центрує зображення */
+	top: 0;
+	left: 0;
+}
+
+/* Fallback background styling */
+.gif-container > div {
+	width: 100%;
+	height: 100%;
+	position: absolute;
+	top: 0;
+	left: 0;
 }
 
 /* Custom scrollbar styling */
